@@ -12,6 +12,7 @@ Bugs fixed:
 - 2949454 Memory leak in ServerProviderInitInstances()
 - 2958167 Remove USE_THREADS sections of httpAdapter
 - 2948647 getObjectPath may dereference NULL pointer
+- 2963746 Incorrect license in test makefiles
 
 Changes in 1.3.7
 ================
